--- a/src/main/resources/templates/sqgl.html
+++ b/src/main/resources/templates/sqgl.html
@@ -37,6 +37,7 @@
 		<link href="plugins/select2/select2.css" rel="stylesheet" ></link>
 		<link href="plugins/jquery-datatables-bs3/css/datatables.css" rel="stylesheet" ></link>
 		<link href="plugins/magnific-popup/css/magnific-popup.css" rel="stylesheet" ></link>
+		<link href="plugins/pnotify/css/pnotify.custom.css" rel="stylesheet" ></link>
 		
 		<!-- Theme CSS -->
 		<link href="css/jquery.mmenu.css" rel="stylesheet" ></link>
@@ -154,7 +155,31 @@
 			</div>
 		</div><!--/container-->
 		
-		
+		<div id="dialog" class="zoom-anim-dialog modal-block modal-block-primary mfp-hide">
+										<div class="panel panel-default">
+											<div class="panel-heading">
+												<h2 class="panel-title">Are you sure?</h2>
+											</div>
+											<div class="panel-body bk-noradius">
+												<div class="modal-wrapper">
+													<div class="modal-icon">
+														<i class="fa fa-question-circle"></i>
+													</div>
+													<div class="modal-text">
+														<p>Are you sure that you want to delete this bookmark?</p>
+													</div>
+												</div>
+											</div>
+											<div class="panel-footer">
+												<div class="row">
+													<div class="col-md-12 text-right">
+														<button class="btn btn-primary modal-confirm">confirm</button>
+														<button class="btn btn-default modal-dismiss">cancel</button>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
 		<div class="clearfix"></div>		
 		
 		
@@ -178,6 +203,7 @@
 		<script src="plugins/jquery-datatables-bs3/js/datatables.js"></script>
 		<script src="plugins/magnific-popup/js/magnific-popup.js"></script>
 		<script src="plugins/sparkline/js/jquery.sparkline.min.js"></script>
+		<script src="plugins/pnotify/js/pnotify.custom.js"></script>
 		
 		<!-- Theme JS -->		
 		<script src="js/jquery.mmenu.min.js"></script>
