添加页面名称

--- a/src/main/resources/templates/sqfl.html
+++ b/src/main/resources/templates/sqfl.html
@@ -78,7 +78,7 @@
 							<ul class="dropdown-menu update-menu" role="menu">
 								<li style="border-bottom: 1px solid #eeeeee;"><a th:href="@{sqdr}"><i class="fa fa-file-text-o bk-fg-primary "></i> 导入html文件 </a></li>
 								<li style="border-bottom: 1px solid #eeeeee;"><a th:href="@{sqzl}"><i class="fa fa-bar-chart-o bk-fg-primary"></i> 书签种类初始化 </a></li>
-								<li ><a th:href="@{sqfl}"><i class="fa fa-bell bk-fg-primary"></i> 未分类书签管理 </a></li>
+								<li ><a href="#"><i class="fa fa-bell bk-fg-primary"></i> 未分类书签管理 </a></li>
 								<li style="border-bottom: 1px solid #eeeeee;"><a th:href="@{sqgl}"><i class="fa fa-envelope bk-fg-primary"></i> 书签管理 </a></li>		
 								
 							</ul>
@@ -123,7 +123,7 @@
 												<th>书签名</th>
 												<th>书签种类</th>
 												<th>点击次数</th>
-												<th>操作</th>
+												<th>点击次数</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -210,7 +210,7 @@
 		<script src="js/core.min.js"></script>
 		
 		<!-- Pages JS -->
-		<script src="js/pages/table-editable.js"></script>
+		<script src="js/pages/sqfl.js"></script>
 		
 		<!-- end: JavaScript-->
 		
