--- a/src/main/resources/templates/sqgl.html
+++ b/src/main/resources/templates/sqgl.html
@@ -119,11 +119,11 @@
 									<table class="table table-bordered table-striped mb-none" id="datatable-editable">
 										<thead>
 											<tr>
-												<th>ID</th>
-												<th>书签名</th>
-												<th>书签种类</th>
-												<th>点击次数</th>
-												<th>操作</th>
+												<th  style="text-align:center;">ID</th>
+												<th  style="text-align:center;">书签名</th>
+												<th  style="text-align:center;">书签种类</th>
+												<th  style="text-align:center;">点击次数</th>
+												<th  style="text-align:center;">操作</th>
 											</tr>
 										</thead>
 										<tbody>
