修改书签分类

--- a/src/main/resources/templates/sqfl.html
+++ b/src/main/resources/templates/sqfl.html
@@ -113,7 +113,7 @@
 											<div class="bk-margin-bottom-10">
 												<!--  <button id="addToTable" class="btn btn-info">Add <i class="fa fa-plus"></i></button>-->
 												<button class="btn btn-info" onclick="classify()">分类  <i class="fa fa-briefcase"></i></button>
-												<button class="btn btn-info" onclick="delete()">删除  <i class="fa fa-gavel"></i></button>
+												<button class="btn btn-info" onclick="deleteBookmark()">删除  <i class="fa fa-gavel"></i></button>
 											</div>
 										</div>
 										
